Hide vercel logo in nav on mobile and fix sponsor card clipping. (#48)

--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -60,6 +60,13 @@
 
 .header-right {
   margin: var(--space-2x) var(--space-16x);
+  display: none;
+}
+
+@media screen and (min-width: 770px) {
+  .header-right {
+    display: initial;
+  }
 }
 
 .tabs {
