--- a/components/sponsors-grid.module.css
+++ b/components/sponsors-grid.module.css
@@ -67,6 +67,7 @@
   width: 100%;
   height: 100%;
   position: relative;
+  display: flex;
 }
 
 .image {
